--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.0",
     "angular-2-local-storage": "^2.0.0",
     "angular-font-awesome": "^3.1.2",
+    "angular2-autosize": "^1.0.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
